--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 *{
     padding: 0;
     margin: auto 0;
     box-sizing: border-box;
 }
 body{
-    background:hsl(230, 17%, 14%)
+    background:hsl(230, 17%, 14%);
+    font-family: 'Inter', sans-serif;
 }
-nav{
+.top-section{
     display: flex;
-    justify-content: space-around;
-}
-.section1-container{
+     justify-content:space-between; 
+    background:hsl(232, 19%, 15%);
     color: white;
-    display: flex;
+    padding-bottom:10%;
+    padding-top:3%;
+}
+.social-title{
+    margin-left:11%;
+    font-weight: 700;
+}
+.total-followers{
+    font-weight:400;
+    font-size: 15px;
+    color:hsl(228, 34%, 66%);
+}
+.toggle{
+    margin-right:11%;
+}
+.checkbox{
+    /* opacity: 0; */
+    /* position:absolute; */
 }
 
+.checkbox:checked + .label .ball{
+    transform: translateX(24px);
+}
+.label{
+    background-color:#fff;
+    height:25px;
+    width: 45px;
+    display: flex;
+    border-radius: 50px;
+    cursor: pointer;
+    position: relative;
+}
+ .label .ball{
+    width: 20px;
+    height: 20px;
+    background-color:black;
+    border-radius: 50%;
+    transform: translate(0px);
+    transition: transform 0,2s linear;
+    /* position:absolute; */
+}
+.section1-container{
+    position: relative;
+    color: white;
+    display: flex;
+    margin-top:-13%;
+    margin-left:10%;
+}
+
+.sub-section1{
+    background: hsl(228, 28%, 20%);
+    margin: 5% 1%;
+    padding: 3% 1%;
+    width:20%;
+    text-align: center;
+}
 
 
 
