--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body{
 .social-title{
     margin-left:11%;
     font-weight: 700;
+    color:white;
 }
 .total-followers{
     font-weight:400;
@@ -30,29 +31,30 @@ body{
     margin-right:11%;
 }
 .checkbox{
-    /* opacity: 0; */
+     /* opacity: 0; */
     /* position:absolute; */
+    /* overflow: hidden; */
 }
 
-.checkbox:checked + .label .ball{
+.checkbox:checked ~ label .ball{
     transform: translateX(24px);
 }
-.label{
+label{
     background-color:#fff;
     height:25px;
     width: 45px;
     display: flex;
     border-radius: 50px;
-    cursor: pointer;
+    cursor:progress;
     position: relative;
 }
- .label .ball{
+ label .ball{
     width: 20px;
     height: 20px;
     background-color:black;
     border-radius: 50%;
     transform: translate(0px);
-    transition: transform 0,2s linear;
+    transition: ease-in 0,2s linear;
     /* position:absolute; */
 }
 .section1-container{
@@ -70,8 +72,23 @@ body{
     width:20%;
     text-align: center;
 }
+ .section2-container{
+    color: white;
+    display: flex;
+    margin-left:10%;
+    margin-right:6%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 
-
+ }
+.sub-section2{
+    display: flex;
+    justify-content:space-between;
+    background: hsl(228, 28%, 20%);
+    margin: 4% 0%;
+    padding:8% 8%;
+    width:75%;
+}
 
 
 
