--- a/styles.css
+++ b/styles.css
@@ -29,29 +29,44 @@ body{
     color:hsl(228, 34%, 66%);
 }
 /* style for the toggle switch */
-.toggle{
-    margin-right:11%;
-}
-.checkbox:checked ~ label .ball{
-    transform: translateX(24px);
-}
-label{
-    background-color:#fff;
-    height:25px;
-    width: 45px;
+  input[type="checkbox"] {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+  }
+  .toggle-container {
     display: flex;
-    border-radius: 50px;
-    cursor:progress;
+    margin-right:11%;
+  }
+  label {
+    cursor: pointer !important;
+    width: 3.5rem;
+    height: 1.7rem;
+    background:linear-gradient(90deg, #378fe6 0%, #3eda82 100%);
+    border-radius: 100px;
     position: relative;
-}
- label .ball{
+    align-self: center;
+  }
+  
+  label:after {
+    position: absolute;
+    content: "";
+    top: 3px;
+    right: 3px;
     width: 20px;
     height: 20px;
-    background-color:black;
-    border-radius: 50%;
-    transform: translate(0px);
-    transition: ease-in 0,2s linear;
-}
+    background:hsl(228, 34%, 66%);
+    border-radius: 90px;
+    transition: 0.3s;
+  }
+  input:checked + label {
+    background:white;
+  }
+  input:checked + label:after {
+    right: calc(100% - 45px);
+    transform: translateX(-100%);
+    background:lightgray;
+  }
 /* first section styling */
 .section1-container{
     position: relative;
@@ -75,7 +90,7 @@ label{
     margin-left:11%;
     margin-right:8%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(4, 1fr);
  }
 .sub-section-overview{
     display: flex;
@@ -102,6 +117,7 @@ small{
 }
 
 
+--instagram: linear-gradient(90deg, #fdc468 0%, #df4996 100%);
 
 
 /* footer styling */
